--- a/ECF_hm3_.ipynb
+++ b/ECF_hm3_.ipynb
@@ -55,7 +55,7 @@
         "id": "OiOBGoBxk1Q6"
       },
       "source": [
-        "#Is the Effect of Family Ownership on the Firm Performance Really Significant?"
+        "#s the relationship between equity issuance and market liquidityjust a matter of region?"
       ]
     },
     {
